# income-tax-law-chat-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/tax_bot/: agent.py  app.py  chains.py  data.py  loader.py  main.py  state_manager.py  store.py
