[project]
name = "tax-chat-bot"
version = "0.1.0"
description = "A Chat Bot About Korean Income Tax"
authors = [
    { name = "yuiyeong", email = "joyuiyeong@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (==0.3.27)",
    "langchain-core (>=0.3.27,<0.4.0)",
    "langchain-text-splitters (>=0.3.9,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)"
]

[project.optional-dependencies]
dev = [
    "ruff (>=0.12.11,<1.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.poetry]
packages = [{ include = "tax_bot", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
